--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 </head>
 <body>
   <header>
-    <h1>Muntahi Chowdhury</h1>
+    <h1>Md Muntahi Hossain</h1>
     <p>Computer Science Student | Web Developer</p>
     <a href="https://drive.google.com/file/d/1OhHPvQ8mDryVFsAWp9zbS1NPuiPfGE8u/view?usp=sharing" target="_blank" class="btn">Download CV</a>
   </header>
